--- a/tests/Makefile
+++ b/tests/Makefile
@@ -10,6 +10,6 @@ test:
 	go test -v -count=1 -covermode=atomic ..
 
 test-docker:
-	docker build -t golang-design/x/clipboard ..
-	docker run --rm --name cb golang-design/x/clipboard
-	docker rmi golang-design/x/clipboard
+	docker build -t github.com/aenmo/clipboard ..
+	docker run --rm --name cb github.com/aenmo/clipboard
+	docker rmi github.com/aenmo/clipboard
